# ComfyUI-PechaKucha

./: README.md  __init__.py  download_pecha_kucha.py  pecha_kucha.py  pyproject.toml  requirements.txt  split_prompt.py
example_workflows/: SimplePechaKucha.json  SimplePechaKucha.pptx
presentation_generation/: pptx.py
web/js/: download_pecha_kucha.js
